chore(sonar): auto-load token and finalize local quality cleanup